...
import androidx.compose.ui.text.input.TextFieldValue
import androidx.compose.ui.tooling.preview.Preview
import androidx.compose.ui.unit.dp
import com.example.chatdemoapp.ui.theme.Transparent
import com.example.chatdemoapp.R

const val MessageInputViewTestTag = "MessageInputViewTestTag"

/**
 * This composable function provides a text field for users to type their messages and a
 * send button to submit the message.
 *
 * @param modifier An optional [Modifier] to configure the layout and appearance of the view.
...
